--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mo": "^1.7.3",
+    "module": "^1.2.5",
     "mysql2": "^3.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
